--- a/Mod2CT_test.ipynb
+++ b/Mod2CT_test.ipynb
@@ -36,19 +36,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Input values from command line arguments\n",
+    "# Prompt the user to enter each value individually\n",
     "try:\n",
-    "    age = float(sys.argv[1])\n",
-    "    height = float(sys.argv[2])\n",
-    "    weight = float(sys.argv[3])\n",
-    "    gender = float(sys.argv[4])\n",
-    "except (IndexError, ValueError):\n",
-    "    print(\"Please provide 4 numerical inputs: age, height, weight, and gender (0 for female, 1 for male).\")\n",
+    "    age = float(input(\"Enter age (in years): \"))\n",
+    "    height = float(input(\"Enter height (in inches): \"))\n",
+    "    weight = float(input(\"Enter weight (in lbs): \"))\n",
+    "    gender = float(input(\"Enter gender (0 for female, 1 for male): \"))\n",
+    "except ValueError:\n",
+    "    print(\"Invalid input. Please enter numeric values.\")\n",
     "    sys.exit()\n",
     "\n",
     "# Input as numpy array\n",
     "input_features = np.array([[age, height, weight, gender]])\n",
     "input_scaled = scaler.transform(input_features)\n",
+    "\n",
     "\n",
     "# Make prediction\n",
     "prediction = knn.predict(input_scaled)\n",
